--- a/index.html
+++ b/index.html
@@ -89,41 +89,48 @@
                   <h3>Others (Amazon Web Services (AWS), Microsoft Azure, Salesforce, Microsoft Azure, JIRA, Linux, Nagios, GitHub, Nexus, ELK, Grafana, Prometheus)</h3>
                </div>
             </div>
-         </div>
-         <!-- Certifications -->
-         <div class="row education">
-            <div class="three columns header-col">
-            <h1><span>Certifications</span></h1>
-            </div>
-            <div class="nine columns main-col">
-            <div class="row item">
-               <div class="twelve columns">
-               <h3>AWS Certified Cloud Practitioner</h3>
+          <!-- Certifications -->
+          <div class="row item">
+            <div class="twelve columns">
+               <h3>
+                 <img class="cert-logo" src="https://d1.awsstatic.com/training-and-certification/Certification%20Badges/AWS-Certified-Cloud-Practitioner_512x512.cfb5d8499d04d0ed8c8e9d9a3e8a95a1e6fb7f4e.png" alt="AWS Logo">
+                 AWS Certified Cloud Practitioner
+               </h3>
                <p class="info"><em class="date">Apr 2023 – Apr 2026</em></p>
-               </div>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-               <h3>Terraform Certified Associate</h3>
+          </div>
+
+          <div class="row item">
+            <div class="twelve columns">
+               <h3>
+                 <img class="cert-logo" src="https://avatars.githubusercontent.com/u/761456?s=200&v=4" alt="Terraform Logo">
+                 Terraform Certified Associate
+               </h3>
                <p class="info"><em class="date">May 2025 – May 2027</em></p>
-               </div>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-               <h3>Salesforce Certified Administrator</h3>
+          </div>
+
+          <div class="row item">
+            <div class="twelve columns">
+               <h3>
+                 <img class="cert-logo" src="https://seeklogo.com/images/S/salesforce-logo-402F408EAC-seeklogo.com.png" alt="Salesforce Logo">
+                 Salesforce Certified Administrator
+               </h3>
                <p class="info"><em class="date">Aug 2020 – Apr 2022</em></p>
-               </div>
             </div>
-            <div class="row item">
-               <div class="twelve columns">
-               <h3>Salesforce Certified Platform Developer I</h3>
+          </div>
+
+          <div class="row item">
+            <div class="twelve columns">
+               <h3>
+                 <img class="cert-logo" src="https://seeklogo.com/images/S/salesforce-logo-402F408EAC-seeklogo.com.png" alt="Salesforce Logo">
+                 Salesforce Certified Platform Developer I
+               </h3>
                <p class="info"><em class="date">Aug 2020 – Dec 2021</em></p>
-               </div>
             </div>
-            </div>
-         </div>
-         <!-- Work -->
-         <div class="row work">
+          </div>
+          <!-- Work -->
+          <div class="row work">
             <div class="three columns header-col">
             <h1><span>Work</span></h1>
          </div>
@@ -214,24 +221,22 @@
                </div>
             </div>
          </div>
-      </div>
-      <!-- Education -->
-      <div class="row item">
-         <div class="nine columns main-col">
-            <div class="twelve columns">
-               <div class="section">
-                  <h2>Education</h2>
-                  <p>
-                     <strong>University of North Texas, Denton</strong> <br>
-                     Masters in Engineering Management [2018 - 2020]<br> GPA : 3.55
-                  </p>
-                  <p>
-                     <strong>Jawaharlal Nehru Technological University, Hyderabad</strong> <br>
-                     Bachelors in Electronics and Communication Engg [2013 - 2017]<br>
-                     GPA : 3.7
-                  </p>
-               </div>
-            </div>
+       <!-- Education -->
+       <div class="section">
+         <h2>Education</h2>
+         <p>
+            <img class="edu-logo" src="https://www.unt.edu/sites/default/files/UNT-logo-green.png" alt="UNT Logo">
+            <strong>University of North Texas, Denton</strong><br>
+            Masters in Engineering Management [2018 - 2020]<br>
+            GPA : 3.55
+         </p>
+         <p>
+            <img class="edu-logo" src="https://www.jntuh.ac.in/img/logo.png" alt="JNTUH Logo">
+            <strong>Jawaharlal Nehru Technological University, Hyderabad</strong><br>
+            Bachelors in Electronics and Communication Engg [2013 - 2017]<br>
+            GPA : 3.7
+         </p>
+       </div>
          </div>
       </div>
       <!-- Website -->
