test add recommendations

--- a/index.html
+++ b/index.html
@@ -221,12 +221,41 @@
                </div>
             </div>
          </div>
-       <!-- Education -->
-       <div class="section">
-         <h2>Education</h2>
-         <p>
-            <img class="edu-logo" src="https://www.unt.edu/sites/default/files/UNT-logo-green.png" alt="UNT Logo">
-            <strong>University of North Texas, Denton</strong><br>
+      <!-- Recommendations -->   
+      <div class="row item">
+         <div class="three columns header-col">
+            <h1><span>Recommendations</span></h1>
+         </div>
+         <div class="nine columns main-col">
+            <div class="recommendation">
+               <div class="recommender-info" style="display: flex; align-items: center; gap: 15px;">
+                  <a href="https://www.linkedin.com/in/ed-welsh" target="_blank">
+                     <img src="https://media.licdn.com/dms/image/v2/D5603AQFFGY4zHZP8KQ/profile-displayphoto-shrink_100_100/B56ZR0i.scHsAU-/0/1737122114648?e=1753920000&amp;v=beta&amp;t=wtZ49Oj6n5vtbkzQwgCbEy7sMpdpjudFUq3P35e9G_M" alt="Edward Welsh" width="48" height="48" style="border-radius:50%;">
+                  </a>
+                  <div>
+                     <a href="https://www.linkedin.com/in/ed-welsh" target="_blank" style="font-weight:bold; color:#222;">Edward Welsh</a><br>
+                     <span style="font-size: 0.95em; color: #555;">Founder - Fatti maschii parole femine - 'Be Curious, Not Judgmental'</span><br>
+                     <span style="font-size: 0.9em; color: #888;">May 28, 2025, Edward managed Pavani directly</span>
+                  </div>
+               </div>
+               <div class="recommendation-text" style="margin-top: 15px;">
+                  <p>
+                     I had the pleasure of hiring Pavani as a DevOps Engineer at Walmart Global Tech, and from day one, she exceeded expectations. She hit the ground running, quickly getting up to speed with our internal systems, tools, and team dynamics. Her ability to absorb complex workflows and integrate seamlessly into cross-functional teams made an immediate impact.
+                  </p>
+                  <p>
+                     Pavani has been instrumental in helping our engineering teams move faster and more efficiently. She proactively identified bottlenecks, optimized CI/CD pipelines, and improved deployment reliability—all while maintaining a strong collaborative spirit. Her technical acumen, combined with her initiative and adaptability, make her an exceptional asset to any team.
+                  </p>
+                  <p>
+                     I highly recommend Pavani for any organization looking for a forward-thinking, action-oriented DevOps professional.
+                  </p>
+               </div>
+            </div>
+            <!-- Education -->
+            <div class="section" style="margin-top: 30px;">
+               <h2>Education</h2>
+               <p>
+                  <img class="edu-logo" src="https://www.unt.edu/sites/default/files/UNT-logo-green.png" alt="UNT Logo">
+                  <strong>University of North Texas, Denton</strong><br>
             Masters in Engineering Management [2018 - 2020]<br>
             GPA : 3.55
          </p>
@@ -236,60 +265,17 @@
             Bachelors in Electronics and Communication Engg [2013 - 2017]<br>
             GPA : 3.7
          </p>
-       </div>
+      </div>
+   </div>
+</div>
+<!-- Website -->
+<div class="row item">
+   <div class="nine columns main-col">
+      <div class="twelve columns">
+         <div class="section">
+            <h3>Website</h3>
+            <p><strong>https://www.salesforce.com/trailblazer/ppanu3</strong></p>
          </div>
       </div>
-      <!-- Website -->
-      <div class="row item">
-         <div class="nine columns main-col">
-            <div class="twelve columns">
-               <div class="section">
-                  <h3>Website</h3>
-                  <p><strong>https://www.salesforce.com/trailblazer/ppanu3</strong></p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <!-- Footer -->
-   <footer>
-      <div class="row">
-         <div class="twelve columns">
-            <ul class="social-links">
-               <li><a href="https://www.instagram.com/panu317/"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://www.linkedin.com/in/panugp/"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://trailblazer.me/id/ppanu3"><i class="fa fa-trailblazer"></i></a></li>
-            </ul>
-            <div class="container">
-               <div class="row s-about__content-bottom">
-                  <div class="column w-1000-stack">
-                     <h3>Contact Details</h3>
-                     <p>
-                        Pavani Panuganti<br>
-                        Dallas, Texas <br>
-                        <a href="tel:+19403047572">+19403047572</a> <br>
-                        <a href="mailto:#0">pavanipanuganti317@gmail.com.com</a>
-                     </p>
-                  </div>
-               </div>
-            </div>
-            <ul class="copyright">
-               <a href="https://www.styleshout.com/free-templates/ceevee/"> Template by CeeVee </a>
-            </ul>
-         </div>
-         <div id="go-top">
-            <a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a>
-         </div>
-      </div>
-   </footer>
-   <!-- JavaScript -->
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-   <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
-   <script src="js/jquery.flexslider.js"></script>
-   <script src="js/waypoints.js"></script>
-   <script src="js/jquery.fittext.js"></script>
-   <script src="js/magnific-popup.js"></script>
-   <script src="js/init.js"></script>
-</body>
-</html>
+   </div>
+</div>
