--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                </div>
             </div>
          </div>
+         <hr style="margin: 40px 0; border: 0; border-top: 2px solid #eee;">
          <!-- Certifications -->
          <div class="row education">
             <div class="three columns header-col">
@@ -131,7 +132,7 @@
             <div class="row item">
                <div class="twelve columns">
                  <h3>
-                   <img class="company-logo" src="https://logo.clearbit.com/walmart.com"  alt="Walmart Logo" style="width:30px; height:30px; vertical-align:middle; margin-right:8px;">
+                   <img class="company-logo" src="https://logo.clearbit.com/walmartinc.com"  alt="Walmart Logo" style="width:30px; height:30px; vertical-align:middle; margin-right:8px;">
                    Walmart Inc
                  </h3>
                  <p class="info">Software Engineer III - DevOps <span>&bull; </span> <em class="date"> March 2024 - Present</em></p>
